# cargo-assets

./: Cargo.toml  justfile  rustfmt.toml  taplo.toml
hooks/: pre-commit
src/: cli.rs  download.rs  error.rs  lib.rs  main.rs  metadata.rs  progress.rs
