[package]
name = "cargo-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13"
anyhow = "1"
serde_json = "1"
sha2 = "0.11.0"
hex = "0.4.3"

[dependencies.camino]
version = "1"
features = ["serde1"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[lints.clippy]
all = "deny"
