[package]
name = "cargo-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures = "0.3"
hex = "0.4"
indicatif = "0.18"
indoc = "2"
reqwest = "0.13"
serde_json = "1"
sha2 = "0.11"

[dependencies.camino]
version = "1"
features = ["serde1"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[lints.clippy]
all = "deny"
